# guardrail-ci

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: guardrail-demo.yml
examples/: guardrail.yml
guardrail_ci/: ai_triage.py  baseline.py  cli.py  config.py  detectors.py  git_scope.py  models.py  policy.py  reporters.py
tests/: test_ai_triage.py  test_baseline.py  test_detectors.py  test_git_scope.py  test_policy.py  test_reporters.py
tests/fixtures/clean_repo/: package-lock.json  package.json
tests/fixtures/vulnerable_repo/: main.py  package.json  security.tf
